# fast_desmos

./: .gitignore  Cargo.toml  README.md  build.bat  clippy.toml  desmos.md  eval_tests.hash  eval_tests.txt  gen.py  line_counter.py  out.txt  parse_nodes.py  results.txt  rewrite.py  rewritten.txt  sample_chain.txt  syntax.xbnf  titles.json  web_cache.json
src/: desmos.rs  gamma.rs  iterator.rs  main.rs  pooled_vec.rs  tests.rs  ui.rs  vec_map.rs  vecs.rs
src/desmos/: evaluate.rs  execute.rs  parsing.rs  rendering.rs  value.rs
src/desmos/evaluate/: constness.rs  context.rs  convert.rs  dependency.rs  linear.rs  pervasive_applies.rs  tree.rs  value.rs
src/desmos/evaluate/convert/: identifiers.rs
src/desmos/evaluate/dependency/: get_deps.rs
src/desmos/evaluate/linear/: value.rs
src/desmos/evaluate/value/: builtins.rs  computable.rs  list.rs  listables.rs  noncomputable.rs
src/desmos/execute/: actions.rs  dependency.rs
src/desmos/execute/actions/: context.rs  convert.rs  tree.rs  value.rs
src/desmos/execute/dependency/: get_deps.rs
src/desmos/parsing/: advancing_vec.rs  lexing.rs  tree.rs
src/desmos/rendering/: circles.rs  drawables.rs
src/desmos/value/: builtins.rs  computable.rs  list.rs  listables.rs  primitive.rs
web_cache/: 7mygrnoz8z.json  8o0fkzh6jx.json  bx2bhoutul.json  dwazp7zubl.json  epretb6vnj.json  gsfgaivdtm.json  ht6vnqkrxx.json  jroixxyk1e.json  kjrqurcozt.json  kwil1ekogq.json  lo2cgy9gsn.json  nkqvr53uit.json  o684kqboqz.json  s2ywcguejh.json  ybhmg9r8qo.json  zldkxehr5r.json  zwnibzy3qb.json
(+14 files in other folders)
