[package]
name = "fast_desmos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
debug = 1
panic = "abort"

[features]
log = []

[dependencies]
reqwest = { version = "0.12.3", features = ["blocking"] }
once_cell = "1.19.0"
fastrand = "2.1.0"
serde_json = "1.0.117"
raylib = "5.0.1"
regex = "1.10.4"
rustc-hash = "1.1.0"
take_mut = "0.2.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.201"
