[package]
name = "fast_desmos"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
#debug = 1
panic = "abort"
opt-level = "s"

[features]
log = []

[dependencies]
once_cell = "1.19.0"
rand = "0.9.0-alpha.1"
serde_json = "1.0.117"
raylib = "5.0.1"
regex = "1.10.4"
rustc-hash = "2.0.0"
take_mut = "0.2.2"
eyre = "0.6.12"
ureq = "2.9.7"
url = "2.5.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.201"
